@@ -15,6 +15,8 @@ bzr-svn 0.5.0					UNRELEASED
 
    * Allow overriding over revision-properties on a per-branch basis. (#319819)
 
+   * Added --idmap-file option to svn-upgrade. 
+
 bzr-svn 0.5.0~rc2				2009-01-30
 
   BUG FIXES
